assets/css/style.css
/* Strictly to set the background color of the html document */
html{
    background-color:cadetblue;
}

/* wild card */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* setting initial spacing for words and their padding from each other*/
p, h2, h3, h4 {
    padding: 10px;
    word-spacing: 2;
}
h3{
    text-decoration: underline;
}

/* A background div for a title atop a ticket */
#title-tag {
    margin: auto;
    background-color: rgb(37, 177, 100);
    border:  2px solid black;
    width: 60%;
    height: 25%;
    text-align: center;
    padding: 15px;
}

/* A div designed to look like a ticket */
#ticket{
    background-color: beige; 
    width: 80%; 
    height: 80%; 
    margin: auto; 
    border: 2px solid black;
    text-align: center;
}
.box{
    position: absolute;
    top: 80%;
    left: 40%;
    transform: translateY(-30%);
    background-color: rgba(216, 176, 127, 0.8);
    width: 40vw;
    height: 40vh;
    padding: 2rem;
    border: 2px solid black;
    border-radius: 35%;
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 1);
}

/* Strictly for identifying text elements to give them an underline decoration */
#underline{
    text-decoration: underline;
}

/* for top nav bar */
.nav-bar{
    margin: auto;
    background-color: cadetblue;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    height: 10%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline center;
    padding-left: 17%
}
.nav-bar > h1{
    text-transform: capitalize;
    padding-left: 20%;
    padding-top: 20px;
}

.nav-bar-middle{
    background-color: rgb(216, 176, 127);
    box-shadow: 0 5px rgba(0, 0, 0, 0.7);
    width: 80%;
}

/* for the hero image */
#Hero{
    height: 700px;
    width: 100%;
    background: url("../images/scouts.png") no-repeat center center/cover;
    background-position: top center;
    position: relative;
}

/* For the message box on hero image*/
.hero-div{
    margin: 0;
    display: flex;
    justify-content: center;
    padding-right: 20%;
}

/* For the main body of my html page */
.container{
    background-color: rgb(216, 176, 127);
    width: 65%;
    height: 100%;
    margin: auto;
    padding-top: 8%;
}



/* for images on the page */
.card {
    background-color: rgb(216, 176, 127);
    width: 100%;
    border: 2.5px solid black;
    border-radius: 5px;
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 1);
    display: flex;
    align-items: center; /* vertically center the items */
    gap: 1rem;
    padding: 1rem;
}

.img {
    width: 40%;
    height: auto;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 1);
}

.text-content {
    flex: 1;
    padding: 0 1rem;
}

